--- a/styles.scss
+++ b/styles.scss
@@ -34,6 +34,7 @@ body {
                     right: 11px;
                     top: 36%;
                     color: gray;
+                    //
                 }
             }
 
