--- a/styles.scss
+++ b/styles.scss
@@ -34,7 +34,7 @@ body {
                     right: 11px;
                     top: 36%;
                     color: gray;
-                    //
+                    //s
                 }
             }
 
@@ -196,74 +196,75 @@ main {
             justify-content: center;
         }
     }
-}
 
-.main-photo {
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.photo1 {
-    background-image: url("img/main1.webp");
-}
-
-.photo2 {
-    background-image: url("img/main2.webp");
-}
-
-.photo3 {
-    background-image: url("img/main3.webp");
-}
-
-
-
-.info-container {
-    width: 100vw;
-    height: 400px;
-    background-color: #FBF2E8;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    ;
-
-    h2 {
-        font-size: 70px;
+    .main-photo {
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
     }
 
-    .info-container-content {
-        display: inline-flex;
-        width: 100%;
-        margin-top: 20px;
+    .photo1 {
+        background-image: url("img/main1.webp");
+    }
 
-        .divider {
-            height: 100%;
-            width: 2px;
-            background-color: black;
+    .photo2 {
+        background-image: url("img/main2.webp");
+    }
+
+    .photo3 {
+        background-image: url("img/main3.webp");
+    }
+
+
+
+
+    .info-container {
+        width: 100vw;
+        height: 400px;
+        background-color: #FBF2E8;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        ;
+
+        h2 {
+            font-size: 70px;
         }
 
-        .address {
-            width: 50%;
-            display: flex;
-            align-items: flex-start;
-            justify-content: center;
+        .info-container-content {
+            display: inline-flex;
+            width: 100%;
+            margin-top: 20px;
 
-            .address-content {
+            .divider {
+                height: 100%;
+                width: 2px;
+                background-color: black;
+            }
+
+            .address {
+                width: 50%;
                 display: flex;
-                align-items: center;
+                align-items: flex-start;
                 justify-content: center;
-                flex-direction: column;
-                width: 230px;
-                margin-left: 70px;
 
-                p {
-                    margin-bottom: 0;
-                    font-family: 'Heebo', sans-serif;
-                }
+                .address-content {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    flex-direction: column;
+                    width: 230px;
+                    margin-left: 70px;
 
-                span {
-                    font-family: 'Playfair Display', serif;
-                    font-size: 27px;
+                    p {
+                        margin-bottom: 0;
+                        font-family: 'Heebo', sans-serif;
+                    }
+
+                    span {
+                        font-family: 'Playfair Display', serif;
+                        font-size: 27px;
+                    }
                 }
             }
         }
@@ -296,88 +297,92 @@ main {
             }
         }
     }
-}
 
-.photos {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: 320px;
 
-    .footer-photo {
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-    }
 
-    .photo1 {
-        background-image: url("img/f1.jpg");
-    }
+    .photos {
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        grid-template-rows: 320px;
 
-    .photo2 {
-        background-image: url("img/f2.jpg");
-    }
-}
-
-.footer-info {
-    display: flex;
-    justify-content: space-around;
-    background-color: #404d3c;
-    color: white;
-    align-items: flex-start;
-    padding: 90px 0;
-
-    h1 {
-        font-family: 'Playfair Display', serif;
-    }
-
-    p {
-        font-family: 'Heebo', sans-serif;
-    }
-
-    a {
-        text-decoration: none;
-        color: white;
-    }
-
-    label {
-        font-family: 'Heebo', sans-serif;
-    }
-
-    .content1 {
-        display: flex;
-        flex-direction: column;
-
-        .email-form {
-            display: flex;
-            flex-direction: column;
+        .footer-photo {
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
         }
 
-        .input-container {
+        .photo1 {
+            background-image: url("img/f1.jpg");
+        }
+
+        .photo2 {
+            background-image: url("img/f2.jpg");
+        }
+    }
+}
+
+footer {
+    .footer-info {
+        display: flex;
+        justify-content: space-around;
+        background-color: #404d3c;
+        color: white;
+        align-items: flex-start;
+        padding: 90px 0;
+
+        h1 {
+            font-family: 'Playfair Display', serif;
+        }
+
+        p {
+            font-family: 'Heebo', sans-serif;
+        }
+
+        a {
+            text-decoration: none;
+            color: white;
+        }
+
+        label {
+            font-family: 'Heebo', sans-serif;
+        }
+
+        .content1 {
             display: flex;
+            flex-direction: column;
 
-            .input-field {
-                padding: 10px;
-                background: transparent;
-                border: 1px solid white;
-                color: white;
-                transition: background-color .5s ease;
-
-                &:hover {
-                    background-color: rgba(255, 255, 255, 0.3);
-                }
+            .email-form {
+                display: flex;
+                flex-direction: column;
             }
 
-            .input-button {
-                background: transparent;
-                border: 1px solid white;
-                color: white;
-                border-left: 0;
-                padding: 10px 15px;
-                transition: background-color .5s ease;
+            .input-container {
+                display: flex;
 
-                &:hover {
-                    background-color: rgba(255, 255, 255, 0.3);
-                    cursor: pointer;
+                .input-field {
+                    padding: 10px;
+                    background: transparent;
+                    border: 1px solid white;
+                    color: white;
+                    transition: background-color .5s ease;
+
+                    &:hover {
+                        background-color: rgba(255, 255, 255, 0.3);
+                    }
+                }
+
+                .input-button {
+                    background: transparent;
+                    border: 1px solid white;
+                    color: white;
+                    border-left: 0;
+                    padding: 10px 15px;
+                    transition: background-color .5s ease;
+
+                    &:hover {
+                        background-color: rgba(255, 255, 255, 0.3);
+                        cursor: pointer;
+                    }
                 }
             }
         }
